fix(thy-header): operation middle and content overflow hidden(#INF-440)

--- a/src/layout/styles/layout.scss
+++ b/src/layout/styles/layout.scss
@@ -131,6 +131,7 @@
         color: $gray-800;
         display: flex;
         align-items: center;
+        flex: 0 0 auto;
 
         a {
             @include link-variant($gray-800, none, $primary, none);
@@ -170,6 +171,13 @@
 
     .layout-header-content {
         flex: auto;
+        overflow: hidden;
+    }
+
+    .layout-header-operation {
+        display: flex;
+        align-items: center;
+        flex: 0 0 auto;
     }
 }
 
